<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CityInfo</string>
    <string name="empty">Список городов пуст</string>
    <string name="view">TextView</string>
    <string name="tempview">TextView</string>
    <string name="pressview">TextView</string>
    <string name="windview">TextView</string>
    <string name="allinfo">Вся информация</string>
    <string name="action_settings">О создателе</string>
    <string name="contact_settings">Контакты</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sensors">Сенсоры</string>
    <string name="content_title">Weather notification</string>
    <string name="settings">Настройки</string>
    <string name="show_temperature">Отображать температуру</string>
    <string name="show_wind">Отображать скорость ветра</string>
    <string name="save">Сохранить настройки</string>
    <string name="asyns">ASyncTask</string>
    <string name="calc">Calculation</string>
    <string name="status">status</string>
    <string name="custom_view">CustomView</string>
    <string name="weather_search">OpenWeather</string>
    <string name="getTemo">Получить данные</string>
    <string name="getTemoBy">Get by GPS</string>

    <string-array name="Cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Екатеринбург</item>
        <item>Новосибирск</item>
        <item>Самара</item>
    </string-array>

</resources>
