<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allinfo" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id = "@+id/button_sensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensors"
        />

        <Button
            android:id = "@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            />

        <Button
            android:id = "@+id/async"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/asyns"
            />

        <Button
            android:id = "@+id/custom_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/custom_view"
            />



    </LinearLayout>


</LinearLayout>